# mvp-list

./: .env.example  .gitignore  DEMO.md  INSTALLATION.md  README.md  agent-engineering-design.md  backend-data-schema-v2.md  conftest.py  deck-prompt-v1.md  deck-prompt-v2-8th.md  deck-prompt-v2-ext.md  deck-prompt-v2.md  frontend-spec-v2.md  prd-v2-day-composer.md  prd.md  pyproject.toml
agent/: __init__.py  main.py  state.py  types.py
day-composer-app/: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
demo-md-repo/: alviso-marina-county-park-san-jose.md  asya-restaurant-san-carlos.md  castle-rock-state-park-los-gatos.md  childrens-discovery-museum-san-jose.md  computer-history-museum-mountain-view.md  don-edwards-san-francisco-bay-national-wildlife-refuge-alviso.md  filoli-woodside.md  hiller-aviation-museum-san-carlos.md  kovai-cafe-milpitas.md  meyhouse-palo-alto.md  pav-bhaji-and-more-santa-clara.md  portola-redwoods-state-park-la-honda.md  pulgas-water-temple-redwood-city.md  ramen-hajime-santa-clara.md  rancho-san-antonio-preserve-cupertino.md  saigon-seafood-harbor-sunnyvale.md  san-jose-museum-of-art-san-jose.md  tarim-garden-santa-clara.md  the-mandarin-menlo-park.md  the-tech-interactive-san-jose.md  uvas-canyon-county-park-morgan-hill.md  windy-hill-open-space-preserve-portola-valley.md  woodside-store-park-woodside.md
playgrounds/: index.html
poc-demo/: README.md  alex_chen_persona.json  composer_prompt.md  demo_places.json  garry_tan_persona.json  mia_persona.json  sam_reyes_persona.json  sample-plans.json
(+124 files in other folders)
